# ros_odrive

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.devcontainer/humble/: Dockerfile  devcontainer.json
.devcontainer/iron/: Dockerfile  devcontainer.json
.devcontainer/iron-remote/: Dockerfile  devcontainer.json
.devcontainer/jazzy/: Dockerfile  devcontainer.json
.devcontainer/kilted/: Dockerfile  devcontainer.json
.github/workflows/: ros-build-test.yaml
include/: odrive_can_node.hpp
launch/config/: example_odrive_config.yaml
msg/: ActiveErrors.msg  AxisState.msg  ControlGains.msg  ControlMessage.msg  ControlMode.msg  ControlPositionGain.msg  ControlTrajAccelLims.msg  ControlTrajVelLim.msg  ControllerStatus.msg  InputMode.msg  ODriveStatus.msg  ODriveStatusAdvanced.msg  ProcedureResult.msg  RebootMessage.msg  ValueAccess.msg
odrive_base/include/: can_helpers.hpp  can_simple_messages.hpp  odrive_enums.h  socket_can.hpp
odrive_base/src/: socket_can.cpp
odrive_botwheel_explorer/: CMakeLists.txt  README.md  package.xml
odrive_botwheel_explorer/config/: diffbot_controllers.yaml  odrive_botwheel_explorer.rviz
odrive_botwheel_explorer/description/urdf/: diffbot.ros2_control.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro  diffbot_materials.urdf.xacro
odrive_botwheel_explorer/launch/: botwheel_explorer.launch.py
odrive_can/: CMakeLists.txt
odrive_can/include/: byte_swap.hpp  epoll_event_loop.hpp  odrive_can_node.hpp
odrive_can/msg/: ControlMessage.msg  ODriveStatus.msg
odrive_can/src/: epoll_event_loop.cpp  odrive_can_node.cpp  socket_can.cpp
odrive_node/: CMakeLists.txt  README.md  package.xml
odrive_node/include/: byte_swap.hpp  odrive_can_node.hpp
odrive_node/launch/: example_launch.yaml  multiple_odrives_example_launch.yaml
odrive_node/msg/: ODriveStatus.msg
odrive_node/src/: main.cpp  odrive_can_node.cpp
odrive_node/srv/: AxisState.srv
odrive_ros2_control/: CMakeLists.txt  README.md  odrive_hardware_interface.xml  package.xml
odrive_ros2_control/src/: odrive_hardware_interface.cpp
src/: odrive_can_node.cpp  socket_can.cpp
srv/: ClearErrors.srv  Estop.srv  RequestAxisState.srv  ValueAccessData.srv
