<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_can</name>
  <version>2.0.0</version>
  <description>Fork from odrive ROS node to expose further can functionality</description>
  <maintainer email="jonasaustinland@tamu.edu">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <rosidl_package_name>${PROJECT_NAME}</rosidl_package_name>
    <rosidl_target_interfaces>msg/${PROJECT_NAME}.msg</rosidl_target_interfaces>
    <build_type>ament_cmake</build_type>
  </export>
</package>
