<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_ros2_control</name>
  <version>0.0.1</version>
  <description>ODrive Hardware Interface for ros2_control</description>
  <maintainer email="info@odriverobotics.com">ODrive Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <rosidl_package_name>${PROJECT_NAME}</rosidl_package_name>
    <build_type>ament_cmake</build_type>
  </export>
</package>
